[package]
name = "pagebreak"
description = "Framework-agnostic website pagination"
homepage = "https://pagebreak.app/"
repository = "https://github.com/CloudCannon/pagebreak/"
version = "0.1.1"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
kuchiki = "0.8.1"
globwalk = "0.8.1"
fs_extra = "1.2.0"
rayon = "1.5.1"