[package]
name = "pagebreak"
description = "Framework-agnostic website pagination"
homepage = "https://pagebreak.app/"
repository = "https://github.com/CloudCannon/pagebreak/"
version = "0.5.1"
edition = "2018"
license = "MIT"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dependencies]
clap = "2.33.0"
kuchiki = "0.8.1"
globwalk = "0.8.1"
fs_extra = "1.2.0"
rayon = "1.5.1"
async-trait = "0.1.42"
path-clean = "0.1.0"
pathdiff = "0.2.0"

[dev-dependencies]
cucumber_rust = "0.9"
futures = "0.3"
tempfile = "3.0.2"
