[package]
name = "pagebreak"
description = "Framework-agnostic website pagination"
homepage = "https://pagebreak.app/"
repository = "https://github.com/CloudCannon/pagebreak/"
version = "0.0.0"
edition = "2021"
license = "MIT"

[[test]]
name = "cucumber"
harness = false   # Allows Cucumber to print output instead of libtest

[dependencies]
clap = "4.0.26"
kuchiki = "0.8.1"
globwalk = "0.8.1"
rayon = "1.5.1"
async-trait = "0.1.42"
lexiclean = "0.0.1"
pathdiff = "0.2.1"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.10"
futures = "0.3"
tempfile = "3.0.2"
